# opus-kman

./: Cargo.toml
.cargo/: config.toml
src/: bandwidth.rs  decoder.rs  encoder.rs  frame_packing.rs  lib.rs  main.rs  mode.rs  packet.rs
src/native/: decoder.rs  encoder.rs  mod.rs
src/web/: decoder.rs  encoder.rs
web-tests/: Cargo.toml  package-lock.json  package.json  webpack.config.js
web-tests/src/: lib.rs
