[package]
name = "opus-kman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["web-tests"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
audiopus_sys = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["AudioEncoder", "AudioDecoder", "AudioDecoderConfig", "AudioEncoderConfig", "AudioEncoderInit", "AudioEncoderSupport", "AudioDecoderInit", "AudioDecoderSupport", "EncodedAudioChunkInit", "AudioData", "EncodedAudioChunk", "CodecState", "AudioDataInit", "AudioSampleFormat", "EncodedAudioChunkType", "AudioDataCopyToOptions"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
