[package]
name = "web-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true


[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "console", "Document", "Element"] }
opus-kman = {path = ".."}
[dev-dependencies]
wasm-bindgen-test = "0.2"
futures = "0.1"
js-sys = "0.3"
wasm-bindgen-futures = "0.3"
